--- a/godot-2d-action-rpg/.gitignore
+++ b/godot-2d-action-rpg/.gitignore
@@ -11,14 +11,11 @@ export_presets.cfg
 .mono/
 data_*/
 
-# nuget
-packages/
-
-*.csproj
-*.sln
-*.user
-
 # IDE
 .vs
 .idea
 .vscode
+
+# Locals
+packages/
+*.user
