--- a/godot-2d-action-rpg/godot-2d-action-rpg.csproj
+++ b/godot-2d-action-rpg/godot-2d-action-rpg.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Enemies\Bat.cs" />
     <Compile Include="Source\Enemies\PlayerDetectionZone.cs" />
+    <Compile Include="Source\Enemies\WanderController.cs" />
     <Compile Include="Source\Objects\Effect.cs" />
     <Compile Include="Source\Objects\Hitbox.cs" />
     <Compile Include="Source\Objects\Hurtbox.cs" />
