--- a/godot-2d-action-rpg/.gitignore
+++ b/godot-2d-action-rpg/.gitignore
@@ -1,3 +1,5 @@
+# Godot 4+ specific ignores
+.godot/
 
 # Godot-specific ignores
 .import/
@@ -10,6 +12,7 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+mono_crash.*.json
 
 # IDE
 .vs
